# PIcoOS

./: CMakeLists.txt  README.md
examples/music_player/: music_player.c
include/: os_config.h
include/core/: system.h
include/drivers/: audio.h  display.h  gpio.h  sd_card.h
include/fs/: fs_manager.h
include/gui/: gui_manager.h
src/: main.c
src/core/: system.c
